--- a/useCase.adoc
+++ b/useCase.adoc
@@ -21,7 +21,8 @@
 . Пользователь выбирает счет, с которого хочет перевести деньги.
 . Система проверяет, что переводы с этого счета возможны.
 . Система выводит форму для ввода сведений перевода.
-. Пользователь вводит данные о счете получателя: ФИО получателя, БИК банка, номера счета.
+. Пользователь указывает, что счет получателя находится в другом банке.
+. Пользователь вводит данные о счете получателя: ФИО получателя, БИК банка, номера счета. 
 . Пользователь указывает сумму перевода, назначение перевода.
 . Система проверяет БИК банка по справочнику “БИК”.
 . Система рассчитывает комиссию перевода.
@@ -43,33 +44,33 @@
 ** *6а2* Система оповещает пользователя об  ошибке.
 ** *6а3* Выполнение сценария возвращает в основной поток в п.2
 
-*10a Введен некорректный БИК банка*
+*11a Введен некорректный БИК банка*
 
-** *10а1* Система обнаруживает, что БИК банка не найден в справочнике “БИК”
-** *10а2* Система оповещает пользователя об  ошибке.
-** *10а3* Выполнение сценария возвращает в основной поток в п.6
+** *11а1* Система обнаруживает, что БИК банка не найден в справочнике “БИК”
+** *11а2* Система оповещает пользователя об  ошибке.
+** *11а3* Выполнение сценария возвращает в основной поток в п.6
 
-*13a Введен некорректный номер счета получателя*
+*14a Введен некорректный номер счета получателя*
 
-** *13а1* Система обнаруживает, что введенный номер счета не соответствует контрольной сумме.
-** *13а2* Система оповещает пользователя об  ошибке.
-** *13а3* Выполнение сценария возвращает в основной поток в п.8
+** *14а1* Система обнаруживает, что введенный номер счета не соответствует контрольной сумме.
+** *14а2* Система оповещает пользователя об  ошибке.
+** *14а3* Выполнение сценария возвращает в основной поток в п.8
 
-*13b Пользователь не является владельцем счета*
+*14b Пользователь не является владельцем счета*
 
-** *13b1* Система обнаруживает, что введенный номер счета не соответствует контрольной сумме.
-** *13b2* Система оповещает пользователя об  ошибке.
-** *13b3* Выполнение сценария возвращает в основной поток в п.5
+** *14b1* Система обнаруживает, что введенный номер счета не соответствует контрольной сумме.
+** *14b2* Система оповещает пользователя об  ошибке.
+** *14b3* Выполнение сценария возвращает в основной поток в п.5
 
-*13с На счете недостаточно денег для совершения перевода*
+*14с На счете недостаточно денег для совершения перевода*
 
-** *13c1* Система обнаруживает, что на выбранном счете пользователя не хватает денег для проведения перевода.
-** *13c2* Система оповещает пользователя об  ошибке.
-** *13c3* Выполнение сценария возвращает в основной поток в п.10
+** *14c1* Система обнаруживает, что на выбранном счете пользователя не хватает денег для проведения перевода.
+** *14c2* Система оповещает пользователя об  ошибке.
+** *14c3* Выполнение сценария возвращает в основной поток в п.10
 
-*16a Пользователь ввёл неверный код*
+*17a Пользователь ввёл неверный код*
 
-** *16а1* Система обнаруживает, что пользователь ввел неверный код подтверждения.
-** *16а2* Система оповещает пользователя об  ошибке.
-** *16a3* Система удаляет код подтверждения..
-** *16а4* Выполнение сценария возвращает в основной поток в п.13
+** *17а1* Система обнаруживает, что пользователь ввел неверный код подтверждения.
+** *17а2* Система оповещает пользователя об  ошибке.
+** *17a3* Система удаляет код подтверждения..
+** *17а4* Выполнение сценария возвращает в основной поток в п.13
